test-cases/invalid/invalid_string.ul
void main() {
    // Strings may not contain non-alphanumeric characters besides !,.:_{} and space.
    string s = "Hello, brackets []!";
}